[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AstroQELM"
version = "0.0.1"
authors = [{ name="Marco Vetrano", email="marco.vetrano01@gmail.com" }]
description = "This python package is a tool for astrophysical data processing using Quantum Extreme Learning Machines. The package uses qiskit as a tool to extract atmospheric features from exoplanetary spectra and also from other type of spectral dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ 
    "pandas>=2.2.3",
    "h5py>=3.12.1",
    "qiskit>=1.2.2"
    "numpy>=2.1.3", 
    "scikit_learn==1.7.0",,
    "scipy==1.15.3", 
    "tqdm==4.66.5"
]

license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
"Homepage" = "https://github.com/MarcoVetrano01/AstroQELM"